# daily-future

./: CMakeLists.txt
include/daily/future/: default_allocator.hpp  future.hpp  future_.hpp  use_future.hpp
libs/future/include/daily/future/: future.hpp
libs/future/test/: CMakeLists.txt  future.cpp
test/: CMakeLists.txt  allocator_support.cpp  external_git.cmake  future.cpp  packaged_task.cpp  use_future.cpp
